force-app/main/default/objects/Error_Log_Link__c/Error_Log_Link__c.object-meta.xml
<CustomObject>
    <label>Error Log Link</label>
    <nameField>
        <displayFormat>ELL-{000000}</displayFormat>
        <label>Error Log Link Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Log Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>