force-app/main/default/objects/Error_Log_Link__c/fields/Error_Log__c.field-meta.xml
<CustomField>
    <fullName>Error_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Error Log</label>
    <referenceTo>Error_Log__c</referenceTo>
    <relationshipLabel>Error Log Links</relationshipLabel>
    <relationshipName>Error_Log_Links</relationshipName>
    <type>Lookup</type>
</CustomField>