force-app/main/default/objects/Error_Log_Link__c/fields/Linked_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Linked_Object_API_Name__c</fullName>
    <label>Linked Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>