force-app/main/default/objects/Error_Log_Link__c/fields/Linked_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Linked_Record_Id__c</fullName>
    <label>Linked Record Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>