force-app/main/default/objects/Error_Log_Link__c/fields/Relationship_Role__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Role__c</fullName>
    <label>Relationship Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Source</fullName>
            </value>
            <value>
                <fullName>Action Source</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>